--- a/Chinook_project.ipynb
+++ b/Chinook_project.ipynb
@@ -195,6 +195,259 @@
    "source": [
     "#2.2 For each of those top 5 countries, who is the highest-spending customer (full name) and what is their total spending?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8243affb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>LastName</th>\n",
+       "      <th>BillingCountry</th>\n",
+       "      <th>total_expense</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Luís</td>\n",
+       "      <td>Gonçalves</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>39.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>François</td>\n",
+       "      <td>Tremblay</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>39.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>43</td>\n",
+       "      <td>Isabelle</td>\n",
+       "      <td>Mercier</td>\n",
+       "      <td>France</td>\n",
+       "      <td>40.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Fynn</td>\n",
+       "      <td>Zimmermann</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>43.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Richard</td>\n",
+       "      <td>Cunningham</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>47.62</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerId FirstName    LastName BillingCountry  total_expense\n",
+       "0           1      Luís   Gonçalves         Brazil          39.62\n",
+       "1           3  François    Tremblay         Canada          39.62\n",
+       "2          43  Isabelle     Mercier         France          40.62\n",
+       "3          37      Fynn  Zimmermann        Germany          43.62\n",
+       "4          26   Richard  Cunningham            USA          47.62"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('./data/Chinhook_data/Invoice.csv')\n",
+    "\n",
+    "df1 = (df.groupby('BillingCountry')\n",
+    "        .agg(Total_Expense=('Total','sum'),\n",
+    "             )\n",
+    "        .sort_values('Total_Expense', ascending=False)\n",
+    "        .head(5)\n",
+    "        )\n",
+    "\n",
+    "df2 = df1.merge(df, how='inner', on='BillingCountry')\n",
+    "df2\n",
+    "# 1) Sum Total per (BillingCountry, CustomerId)\n",
+    "df3 = (df2.groupby(['BillingCountry','CustomerId'])\n",
+    "       .agg(total_expense=('Total', 'sum'))\n",
+    "    )\n",
+    "df3\n",
+    "# 2) For each country, keep the customer with highest total_expense\n",
+    "idx = agg.groupby('BillingCountry')['total_expense'].idxmax()\n",
+    "top_customers = agg.loc[idx].reset_index(drop=True)\n",
+    "top_customers\n",
+    "\n",
+    "df = pd.read_csv('./data/Chinhook_data/Customer.csv')\n",
+    "\n",
+    "df4 = top_customers.merge(df, how='inner', on='CustomerId')\n",
+    "df4 = df4[['CustomerId','FirstName','LastName','BillingCountry','total_expense']]\n",
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ad5b894e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>LastName</th>\n",
+       "      <th>BillingCountry</th>\n",
+       "      <th>total_expense</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Luís</td>\n",
+       "      <td>Gonçalves</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>39.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>François</td>\n",
+       "      <td>Tremblay</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>39.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>43</td>\n",
+       "      <td>Isabelle</td>\n",
+       "      <td>Mercier</td>\n",
+       "      <td>France</td>\n",
+       "      <td>40.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Fynn</td>\n",
+       "      <td>Zimmermann</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>43.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Richard</td>\n",
+       "      <td>Cunningham</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>47.62</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerId FirstName    LastName BillingCountry  total_expense\n",
+       "0           1      Luís   Gonçalves         Brazil          39.62\n",
+       "1           3  François    Tremblay         Canada          39.62\n",
+       "2          43  Isabelle     Mercier         France          40.62\n",
+       "3          37      Fynn  Zimmermann        Germany          43.62\n",
+       "4          26   Richard  Cunningham            USA          47.62"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load data\n",
+    "invoices = pd.read_csv('./data/Chinhook_data/Invoice.csv')\n",
+    "customers = pd.read_csv('./data/Chinhook_data/Customer.csv')\n",
+    "\n",
+    "# (Optional) Top 5 countries by total invoice amount\n",
+    "top_countries = (\n",
+    "    invoices.groupby('BillingCountry', as_index=False)\n",
+    "            .agg(country_expense=('Total', 'sum'))\n",
+    "            .nlargest(5, 'country_expense')\n",
+    ")\n",
+    "\n",
+    "# Keep only those countries (remove this block if you want all countries)\n",
+    "invoices_top = invoices.merge(top_countries[['BillingCountry']], on='BillingCountry')\n",
+    "\n",
+    "# Total purchase per (country, customer)\n",
+    "country_customer_totals = (\n",
+    "    invoices_top.groupby(['BillingCountry', 'CustomerId'], as_index=False)\n",
+    "                .agg(total_expense=('Total', 'sum'))\n",
+    ")\n",
+    "\n",
+    "# For each country, customer with highest total purchase\n",
+    "idx = country_customer_totals.groupby('BillingCountry')['total_expense'].idxmax()\n",
+    "top_customers = country_customer_totals.loc[idx].reset_index(drop=True)\n",
+    "\n",
+    "# Attach customer names\n",
+    "result = (\n",
+    "    top_customers\n",
+    "    .merge(customers[['CustomerId', 'FirstName', 'LastName']], on='CustomerId')\n",
+    "    [['CustomerId', 'FirstName', 'LastName', 'BillingCountry', 'total_expense']]\n",
+    ")\n",
+    "result"
+   ]
   }
  ],
  "metadata": {
