--- a/Chinook_project.ipynb
+++ b/Chinook_project.ipynb
@@ -448,11 +448,417 @@
     ")\n",
     "result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b74a281c",
+   "metadata": {},
+   "source": [
+    "### Q3.1.\n",
+    "* Which 5 tracks generated the highest total sales revenue (sum of unitprice * quantity)?\n",
+    "* For each of these tracks, list: track name, artist name, album title, total units sold, and total revenue.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "cdbe142f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceLineId</th>\n",
+       "      <th>InvoiceId</th>\n",
+       "      <th>TrackId</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>sales_revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2199</th>\n",
+       "      <td>2200</td>\n",
+       "      <td>404</td>\n",
+       "      <td>2922</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2198</th>\n",
+       "      <td>2199</td>\n",
+       "      <td>404</td>\n",
+       "      <td>2913</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2197</th>\n",
+       "      <td>2198</td>\n",
+       "      <td>404</td>\n",
+       "      <td>2904</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2196</th>\n",
+       "      <td>2197</td>\n",
+       "      <td>404</td>\n",
+       "      <td>2895</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2195</th>\n",
+       "      <td>2196</td>\n",
+       "      <td>404</td>\n",
+       "      <td>2886</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      InvoiceLineId  InvoiceId  TrackId  UnitPrice  Quantity  sales_revenue\n",
+       "2199           2200        404     2922       1.99         1           1.99\n",
+       "2198           2199        404     2913       1.99         1           1.99\n",
+       "2197           2198        404     2904       1.99         1           1.99\n",
+       "2196           2197        404     2895       1.99         1           1.99\n",
+       "2195           2196        404     2886       1.99         1           1.99"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('./data/Chinhook_dataset/InvoiceLine.csv')\n",
+    "df['sales_revenue'] = df['UnitPrice']*df['Quantity']\n",
+    "df_revenue = df.sort_values('sales_revenue',ascending=False)\n",
+    "df_revenue.head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "6af0a382",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TrackId</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>total_units</th>\n",
+       "      <th>total_revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1843</th>\n",
+       "      <td>3223</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1656</th>\n",
+       "      <td>2868</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1840</th>\n",
+       "      <td>3214</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1823</th>\n",
+       "      <td>3177</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1830</th>\n",
+       "      <td>3200</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      TrackId  UnitPrice  total_units  total_revenue\n",
+       "1843     3223       1.99            2           3.98\n",
+       "1656     2868       1.99            2           3.98\n",
+       "1840     3214       1.99            2           3.98\n",
+       "1823     3177       1.99            2           3.98\n",
+       "1830     3200       1.99            2           3.98"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_track = (\n",
+    "    df_revenue\n",
+    "    .groupby([\"TrackId\",'UnitPrice'], as_index=False)\n",
+    "    .agg(\n",
+    "        total_units=(\"Quantity\",\"sum\"),\n",
+    "        total_revenue=(\"sales_revenue\",\"sum\")\n",
+    "    )\n",
+    ")\n",
+    "df_track=df_track.sort_values('total_revenue',ascending=False)\n",
+    "df_track.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "5fc7de76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TrackId</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>total_units</th>\n",
+       "      <th>total_revenue</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>AlbumId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3223</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>How to Stop an Exploding Man</td>\n",
+       "      <td>228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2868</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>Walkabout</td>\n",
+       "      <td>230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3214</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>Phyllis's Wedding</td>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3177</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>Hot Girl</td>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3200</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>Gay Witch Hunt</td>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1979</th>\n",
+       "      <td>1209</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>Lord of Light</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980</th>\n",
+       "      <td>1204</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>The Pilgrim</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1981</th>\n",
+       "      <td>1203</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>Brighter Than a Thousand Suns</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1982</th>\n",
+       "      <td>1202</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>These Colours Don't Run</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1983</th>\n",
+       "      <td>1235</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>The Wicker Man</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1984 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      TrackId  UnitPrice  total_units  total_revenue  \\\n",
+       "0        3223       1.99            2           3.98   \n",
+       "1        2868       1.99            2           3.98   \n",
+       "2        3214       1.99            2           3.98   \n",
+       "3        3177       1.99            2           3.98   \n",
+       "4        3200       1.99            2           3.98   \n",
+       "...       ...        ...          ...            ...   \n",
+       "1979     1209       0.99            1           0.99   \n",
+       "1980     1204       0.99            1           0.99   \n",
+       "1981     1203       0.99            1           0.99   \n",
+       "1982     1202       0.99            1           0.99   \n",
+       "1983     1235       0.99            1           0.99   \n",
+       "\n",
+       "                         track_name  AlbumId  \n",
+       "0      How to Stop an Exploding Man      228  \n",
+       "1                         Walkabout      230  \n",
+       "2                 Phyllis's Wedding      251  \n",
+       "3                          Hot Girl      249  \n",
+       "4                    Gay Witch Hunt      251  \n",
+       "...                             ...      ...  \n",
+       "1979                  Lord of Light       94  \n",
+       "1980                    The Pilgrim       94  \n",
+       "1981  Brighter Than a Thousand Suns       94  \n",
+       "1982        These Colours Don't Run       94  \n",
+       "1983                 The Wicker Man       97  \n",
+       "\n",
+       "[1984 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Track_info= pd.read_csv('./data/Chinhook_dataset/Track.csv')\n",
+    "df_track.merge(Track_info[['TrackId', \"Name\", 'AlbumId']], on=\"TrackId\").rename(columns={'Name':\"track_name\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0556abb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".pandas_venv",
+   "display_name": ".pandas_venv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
@@ -466,7 +872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
