--- a/Chinook_project.ipynb
+++ b/Chinook_project.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "cdbe142f",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
        "2195           2196        404     2886       1.99         1           1.99"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,17 +848,281 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "def82825",
+   "metadata": {},
+   "source": [
+    "### Q3.2.\n",
+    "* For each genre, compute the total units sold and total revenue worldwide.\n",
+    "* From that result, identify the top 3 genres by revenue.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0556abb8",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['GenreId', 'Name'], dtype='object')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df_genre = pd.read_csv('./data/Chinhook_dataset/Genre.csv')\n",
+    "df_genre.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1f89240f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_track = pd.read_csv('./data/Chinhook_dataset/Track.csv')\n",
+    "#df_track.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "49f9e749",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_megred_temp = df_genre.merge(df_track,on='GenreId',how='inner', suffixes=('Genre','Track')).drop(columns=['Bytes','Milliseconds','MediaTypeId','AlbumId','UnitPrice'])\n",
+    "#df_megred_temp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "95de72a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_invoiceLine = pd.read_csv('./data/Chinhook_dataset/InvoiceLine.csv')\n",
+    "df_megred= df_megred_temp.merge(df_invoiceLine, on='TrackId', how='inner').drop(columns=['InvoiceId','InvoiceLineId'])\n",
+    "#df_megred.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "c19a5845",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total_units_sold</th>\n",
+       "      <th>Total_revenue</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NameGenre</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alternative</th>\n",
+       "      <td>14</td>\n",
+       "      <td>13.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alternative &amp; Punk</th>\n",
+       "      <td>244</td>\n",
+       "      <td>241.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Blues</th>\n",
+       "      <td>61</td>\n",
+       "      <td>60.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bossa Nova</th>\n",
+       "      <td>15</td>\n",
+       "      <td>14.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Classical</th>\n",
+       "      <td>41</td>\n",
+       "      <td>40.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Comedy</th>\n",
+       "      <td>9</td>\n",
+       "      <td>17.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drama</th>\n",
+       "      <td>29</td>\n",
+       "      <td>57.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Easy Listening</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Electronica/Dance</th>\n",
+       "      <td>12</td>\n",
+       "      <td>11.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Heavy Metal</th>\n",
+       "      <td>12</td>\n",
+       "      <td>11.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hip Hop/Rap</th>\n",
+       "      <td>17</td>\n",
+       "      <td>16.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jazz</th>\n",
+       "      <td>80</td>\n",
+       "      <td>79.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Latin</th>\n",
+       "      <td>386</td>\n",
+       "      <td>382.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Metal</th>\n",
+       "      <td>264</td>\n",
+       "      <td>261.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pop</th>\n",
+       "      <td>28</td>\n",
+       "      <td>27.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R&amp;B/Soul</th>\n",
+       "      <td>41</td>\n",
+       "      <td>40.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Reggae</th>\n",
+       "      <td>30</td>\n",
+       "      <td>29.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rock</th>\n",
+       "      <td>835</td>\n",
+       "      <td>826.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rock And Roll</th>\n",
+       "      <td>6</td>\n",
+       "      <td>5.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sci Fi &amp; Fantasy</th>\n",
+       "      <td>20</td>\n",
+       "      <td>39.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Science Fiction</th>\n",
+       "      <td>6</td>\n",
+       "      <td>11.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Soundtrack</th>\n",
+       "      <td>20</td>\n",
+       "      <td>19.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TV Shows</th>\n",
+       "      <td>47</td>\n",
+       "      <td>93.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>World</th>\n",
+       "      <td>13</td>\n",
+       "      <td>12.87</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Total_units_sold  Total_revenue\n",
+       "NameGenre                                          \n",
+       "Alternative                       14          13.86\n",
+       "Alternative & Punk               244         241.56\n",
+       "Blues                             61          60.39\n",
+       "Bossa Nova                        15          14.85\n",
+       "Classical                         41          40.59\n",
+       "Comedy                             9          17.91\n",
+       "Drama                             29          57.71\n",
+       "Easy Listening                    10           9.90\n",
+       "Electronica/Dance                 12          11.88\n",
+       "Heavy Metal                       12          11.88\n",
+       "Hip Hop/Rap                       17          16.83\n",
+       "Jazz                              80          79.20\n",
+       "Latin                            386         382.14\n",
+       "Metal                            264         261.36\n",
+       "Pop                               28          27.72\n",
+       "R&B/Soul                          41          40.59\n",
+       "Reggae                            30          29.70\n",
+       "Rock                             835         826.65\n",
+       "Rock And Roll                      6           5.94\n",
+       "Sci Fi & Fantasy                  20          39.80\n",
+       "Science Fiction                    6          11.94\n",
+       "Soundtrack                        20          19.80\n",
+       "TV Shows                          47          93.53\n",
+       "World                             13          12.87"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_megred['Revenue']=df_megred['UnitPrice'] * df_megred['Quantity']\n",
+    "ans =(df_megred.groupby('NameGenre')\n",
+    "      .agg(\n",
+    "          Total_units_sold=('Quantity','sum'),\n",
+    "          Total_revenue=('Revenue','sum')\n",
+    "      ))\n",
+    "ans"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".pandas_venv (3.12.4)",
+   "display_name": ".pandas_venv",
    "language": "python",
    "name": "python3"
   },
@@ -872,7 +1136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
