--- a/Chinook_project.ipynb
+++ b/Chinook_project.ipynb
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "0556abb8",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
        "Index(['GenreId', 'Name'], dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "1f89240f",
    "metadata": {},
    "outputs": [],
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "49f9e749",
    "metadata": {},
    "outputs": [],
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "95de72a5",
    "metadata": {},
    "outputs": [],
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "c19a5845",
    "metadata": {},
    "outputs": [
@@ -952,64 +952,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Alternative</th>\n",
-       "      <td>14</td>\n",
-       "      <td>13.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Alternative &amp; Punk</th>\n",
-       "      <td>244</td>\n",
-       "      <td>241.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Blues</th>\n",
-       "      <td>61</td>\n",
-       "      <td>60.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bossa Nova</th>\n",
-       "      <td>15</td>\n",
-       "      <td>14.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Classical</th>\n",
-       "      <td>41</td>\n",
-       "      <td>40.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Comedy</th>\n",
-       "      <td>9</td>\n",
-       "      <td>17.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Drama</th>\n",
-       "      <td>29</td>\n",
-       "      <td>57.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Easy Listening</th>\n",
-       "      <td>10</td>\n",
-       "      <td>9.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Electronica/Dance</th>\n",
-       "      <td>12</td>\n",
-       "      <td>11.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Heavy Metal</th>\n",
-       "      <td>12</td>\n",
-       "      <td>11.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hip Hop/Rap</th>\n",
-       "      <td>17</td>\n",
-       "      <td>16.83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jazz</th>\n",
-       "      <td>80</td>\n",
-       "      <td>79.20</td>\n",
+       "      <th>Rock</th>\n",
+       "      <td>835</td>\n",
+       "      <td>826.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Latin</th>\n",
@@ -1021,90 +966,19 @@
        "      <td>264</td>\n",
        "      <td>261.36</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pop</th>\n",
-       "      <td>28</td>\n",
-       "      <td>27.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>R&amp;B/Soul</th>\n",
-       "      <td>41</td>\n",
-       "      <td>40.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Reggae</th>\n",
-       "      <td>30</td>\n",
-       "      <td>29.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rock</th>\n",
-       "      <td>835</td>\n",
-       "      <td>826.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rock And Roll</th>\n",
-       "      <td>6</td>\n",
-       "      <td>5.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sci Fi &amp; Fantasy</th>\n",
-       "      <td>20</td>\n",
-       "      <td>39.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Science Fiction</th>\n",
-       "      <td>6</td>\n",
-       "      <td>11.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Soundtrack</th>\n",
-       "      <td>20</td>\n",
-       "      <td>19.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TV Shows</th>\n",
-       "      <td>47</td>\n",
-       "      <td>93.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>World</th>\n",
-       "      <td>13</td>\n",
-       "      <td>12.87</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Total_units_sold  Total_revenue\n",
-       "NameGenre                                          \n",
-       "Alternative                       14          13.86\n",
-       "Alternative & Punk               244         241.56\n",
-       "Blues                             61          60.39\n",
-       "Bossa Nova                        15          14.85\n",
-       "Classical                         41          40.59\n",
-       "Comedy                             9          17.91\n",
-       "Drama                             29          57.71\n",
-       "Easy Listening                    10           9.90\n",
-       "Electronica/Dance                 12          11.88\n",
-       "Heavy Metal                       12          11.88\n",
-       "Hip Hop/Rap                       17          16.83\n",
-       "Jazz                              80          79.20\n",
-       "Latin                            386         382.14\n",
-       "Metal                            264         261.36\n",
-       "Pop                               28          27.72\n",
-       "R&B/Soul                          41          40.59\n",
-       "Reggae                            30          29.70\n",
-       "Rock                             835         826.65\n",
-       "Rock And Roll                      6           5.94\n",
-       "Sci Fi & Fantasy                  20          39.80\n",
-       "Science Fiction                    6          11.94\n",
-       "Soundtrack                        20          19.80\n",
-       "TV Shows                          47          93.53\n",
-       "World                             13          12.87"
+       "           Total_units_sold  Total_revenue\n",
+       "NameGenre                                 \n",
+       "Rock                    835         826.65\n",
+       "Latin                   386         382.14\n",
+       "Metal                   264         261.36"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,14 +989,307 @@
     "      .agg(\n",
     "          Total_units_sold=('Quantity','sum'),\n",
     "          Total_revenue=('Revenue','sum')\n",
-    "      ))\n",
+    "      ).sort_values(by='Total_revenue',ascending=False)\n",
+    "      .head(3)\n",
+    "      )\n",
     "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e99b7d13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # AI answer: cleaner\n",
+    "# import pandas as pd\n",
+    "\n",
+    "# # 1. Load data (update paths as needed)\n",
+    "# invline = pd.read_csv(\"InvoiceLine.csv\")\n",
+    "# track   = pd.read_csv(\"Track.csv\")\n",
+    "# genre   = pd.read_csv(\"Genre.csv\")\n",
+    "\n",
+    "# # 2. Compute line revenue\n",
+    "# invline[\"Revenue\"] = invline[\"UnitPrice\"] * invline[\"Quantity\"]\n",
+    "\n",
+    "# # 3. Map tracks to genres\n",
+    "# track_genre = track[[\"TrackId\", \"GenreId\"]].merge(genre, on=\"GenreId\")  # genre has columns GenreId, Name\n",
+    "\n",
+    "# # 4. Fact table: one row per invoice line + genre\n",
+    "# fact = invline.merge(track_genre, on=\"TrackId\")\n",
+    "\n",
+    "# # 5. Aggregate per genre\n",
+    "# genre_sales = (\n",
+    "#     fact\n",
+    "#     .groupby([\"GenreId\", \"Name\"], as_index=False)\n",
+    "#     .agg(UnitsSold=(\"Quantity\", \"sum\"),\n",
+    "#          Revenue=(\"Revenue\", \"sum\"))\n",
+    "#     .sort_values(\"Revenue\", ascending=False)\n",
+    "# )\n",
+    "\n",
+    "# # 6. Top 3 genres by revenue\n",
+    "# top3 = genre_sales.head(3)\n",
+    "\n",
+    "# print(genre_sales)   # full Q3.2 result: units + revenue for every genre\n",
+    "# print(\"\\nTop 3 genres by revenue:\\n\", top3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1452adef",
+   "metadata": {},
+   "source": [
+    "### Q3.3.\n",
+    "* Focusing only on USA customers, which genre has the highest number of tracks sold?\n",
+    "* For that top USA genre, which 3 artists have the highest track sales (units sold) in the USA?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "b29a4643",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total_sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rock</th>\n",
+       "      <td>157</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Total_sales\n",
+       "Name             \n",
+       "Rock          157"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('./data/Chinhook_dataset/Invoice.csv')\n",
+    "usa_customers = df[df['BillingCountry'] == 'USA'].drop(columns=['InvoiceDate','BillingPostalCode','CustomerId'],axis=1)\n",
+    "invoice_line =pd.read_csv('./data/Chinhook_dataset/InvoiceLine.csv')\n",
+    "full_usa_cust=usa_customers[['InvoiceId','BillingCountry']].merge(invoice_line[['InvoiceId','TrackId','UnitPrice','Quantity']], on='InvoiceId')\n",
+    "track =pd.read_csv('./data/Chinhook_dataset/Track.csv')\n",
+    "usa_genre_cust = full_usa_cust.merge(track[['TrackId','GenreId']], on='TrackId')\n",
+    "genre =pd.read_csv('./data/Chinhook_dataset/Genre.csv')\n",
+    "df = usa_genre_cust.merge(genre, on='GenreId')\n",
+    "df_finall = (df.groupby('Name')\n",
+    "             .agg(\n",
+    "                 Total_sales=('Quantity','sum')\n",
+    "             )\n",
+    "             .sort_values('Total_sales', ascending=False)\n",
+    "             .head(1))\n",
+    "df_finall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "ea4e81d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArtistId</th>\n",
+       "      <th>Total_sales</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>150</td>\n",
+       "      <td>23</td>\n",
+       "      <td>U2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>58</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Deep Purple</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Iron Maiden</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ArtistId  Total_sales         Name\n",
+       "0       150           23           U2\n",
+       "1        58           15  Deep Purple\n",
+       "2        90           14  Iron Maiden"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Second part\n",
+    "df1 = df[df['Name']=='Rock']\n",
+    "df2 = df1.merge(track[['TrackId','AlbumId']], on='TrackId' )\n",
+    "album =pd.read_csv('./data/Chinhook_dataset/Album.csv')\n",
+    "df3 = df2.merge(album[['AlbumId','ArtistId']], on='AlbumId')\n",
+    "df3\n",
+    "top_3 = (df3.groupby(['ArtistId'])\n",
+    "         .agg(\n",
+    "             Total_sales = ('Quantity','sum')\n",
+    "         )\n",
+    "         .sort_values(by='Total_sales', ascending=False)\n",
+    "         .head(3))\n",
+    "artist =pd.read_csv('./data/Chinhook_dataset/Artist.csv')\n",
+    "top_3_name = top_3.merge(artist,on='ArtistId')\n",
+    "top_3_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dbda91d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   GenreId                Name  Quantity\n",
+      "0        1                Rock       157\n",
+      "6        7               Latin        91\n",
+      "2        3               Metal        64\n",
+      "3        4  Alternative & Punk        50\n",
+      "1        2                Jazz        22\n",
+      "   ArtistId  Quantity         Name\n",
+      "0       150        23           U2\n",
+      "1        58        15  Deep Purple\n",
+      "2        90        14  Iron Maiden\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Answer with AI\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load data\n",
+    "cust   = pd.read_csv(\"./data/Chinhook_dataset/Customer.csv\")\n",
+    "inv    = pd.read_csv(\"./data/Chinhook_dataset/Invoice.csv\")\n",
+    "invline = pd.read_csv(\"./data/Chinhook_dataset/InvoiceLine.csv\")\n",
+    "track  = pd.read_csv(\"./data/Chinhook_dataset/Track.csv\")\n",
+    "genre  = pd.read_csv(\"./data/Chinhook_dataset/Genre.csv\")\n",
+    "album  = pd.read_csv(\"./data/Chinhook_dataset/Album.csv\")\n",
+    "artist = pd.read_csv(\"./data/Chinhook_dataset/Artist.csv\")\n",
+    "\n",
+    "# 1) USA customers and their invoices\n",
+    "cust_usa = cust[cust[\"Country\"] == \"USA\"]\n",
+    "inv_usa = inv[inv[\"CustomerId\"].isin(cust_usa[\"CustomerId\"])]\n",
+    "usa_lines = invline[invline[\"InvoiceId\"].isin(inv_usa[\"InvoiceId\"])]\n",
+    "\n",
+    "# 2) Attach genre information to USA lines\n",
+    "track_genre = track[[\"TrackId\", \"GenreId\"]].merge(genre, on=\"GenreId\")\n",
+    "usa_fact = usa_lines.merge(track_genre, on=\"TrackId\")\n",
+    "\n",
+    "# 3) Find the top USA genre by units\n",
+    "by_genre_usa = (\n",
+    "    usa_fact\n",
+    "    .groupby([\"GenreId\", \"Name\"], as_index=False)[\"Quantity\"]\n",
+    "    .sum()\n",
+    "    .sort_values(\"Quantity\", ascending=False)\n",
+    ")\n",
+    "top_genre_id = by_genre_usa.iloc[0][\"GenreId\"]\n",
+    "\n",
+    "# 4) Restrict to that top genre (Rock)\n",
+    "usa_top_genre = usa_fact[usa_fact[\"GenreId\"] == top_genre_id]\n",
+    "\n",
+    "# 5) Map tracks -> albums -> artists\n",
+    "track_album = track[[\"TrackId\", \"AlbumId\"]].merge(\n",
+    "    album[[\"AlbumId\", \"ArtistId\"]], on=\"AlbumId\"\n",
+    ")\n",
+    "\n",
+    "usa_top_genre_art = usa_top_genre.merge(track_album, on=\"TrackId\")\n",
+    "\n",
+    "# 6) Aggregate units per artist within that genre in the USA\n",
+    "by_artist_usa_top_genre = (\n",
+    "    usa_top_genre_art\n",
+    "    .groupby(\"ArtistId\", as_index=False)[\"Quantity\"]\n",
+    "    .sum()\n",
+    "    .sort_values(\"Quantity\", ascending=False)\n",
+    ")\n",
+    "\n",
+    "# 7) Attach artist names and take top 3\n",
+    "top3_artists_usa_top_genre = (\n",
+    "    by_artist_usa_top_genre\n",
+    "    .merge(artist, on=\"ArtistId\")\n",
+    "    .head(3)\n",
+    ")\n",
+    "\n",
+    "print(by_genre_usa.head())              # shows Rock as top USA genre\n",
+    "print(top3_artists_usa_top_genre)       # 3 artists with highest units in that genre\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".pandas_venv",
+   "display_name": ".pandas_venv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
@@ -1136,7 +1303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
