--- a/Chinook_project.ipynb
+++ b/Chinook_project.ipynb
@@ -1289,7 +1289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".pandas_venv (3.12.4)",
+   "display_name": ".pandas_venv",
    "language": "python",
    "name": "python3"
   },
@@ -1303,7 +1303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
