Northwind project started

--- a/Northwind_project.ipynb
+++ b/Northwind_project.ipynb
@@ -13,7 +13,11 @@
    "id": "0dedb629",
    "metadata": {},
    "source": [
-    "Northwind is a classic sample database that models a small international wholesale company, Northwind Traders. It contains realistic data on customers, suppliers, employees, products, and orders, allowing you to analyze the full sales process from product sourcing to order fulfillment."
+    "Northwind is a classic sample database that models a small international wholesale company, Northwind Traders. It contains realistic data on customers, suppliers, employees, products, and orders, allowing you to analyze the full sales process from product sourcing to order fulfillment.\n",
+    "\n",
+    "questions link:\n",
+    "\n",
+    "https://github.com/ndleah/northwind/blob/main/queries/01_query.sql"
    ]
   },
   {
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "6f23dbe8",
    "metadata": {},
    "outputs": [
@@ -65,8 +69,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>productName</th>\n",
-       "      <th>unitPrice</th>\n",
+       "      <th>productname</th>\n",
+       "      <th>unitprice</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -100,7 +104,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                  productName  unitPrice\n",
+       "                  productname  unitprice\n",
        "0              Tarte au sucre       49.3\n",
        "1                 Ipoh Coffee       46.0\n",
        "2          Schoggi Schokolade       43.9\n",
@@ -108,7 +112,7 @@
        "4  Northwoods Cranberry Sauce       40.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,15 +120,15 @@
    "source": [
     "import pandas as pd \n",
     "\n",
-    "products = pd.read_csv('./data/Northwind_dataset/products.csv', encoding='latin1')\n",
+    "products = pd.read_csv('./data/Northwind_dataset/products.csv')\n",
     "\n",
     "# 1) Filter on price range AND not discontinued\n",
-    "df_res = products[products['unitPrice'].between(20,50)] \n",
+    "df_res = products[products['unitprice'].between(20,50)] \n",
     "df_res =  df_res[df_res['discontinued'] == 0] \n",
     "\n",
     "df_res = (\n",
-    "    df_res[['productName', 'unitPrice']]\n",
-    "    .sort_values(by='unitPrice', ascending=False)\n",
+    "    df_res[['productname', 'unitprice']]\n",
+    "    .sort_values(by='unitprice', ascending=False)\n",
     "    .reset_index(drop=True)\n",
     "    .head()\n",
     ")\n",
@@ -154,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "id": "9d25729c",
    "metadata": {},
    "outputs": [
@@ -189,70 +193,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Austria</th>\n",
-       "      <td>5.89</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Brazil</th>\n",
-       "      <td>8.12</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>France</th>\n",
-       "      <td>9.43</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Germany</th>\n",
-       "      <td>5.38</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Spain</th>\n",
-       "      <td>7.83</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sweden</th>\n",
-       "      <td>13.29</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UK</th>\n",
-       "      <td>6.25</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>USA</th>\n",
-       "      <td>7.89</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Venezuela</th>\n",
-       "      <td>8.73</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           average_shipping_time  total_orders\n",
-       "country                                       \n",
-       "Austria                     5.89            11\n",
-       "Brazil                      8.12            28\n",
-       "France                      9.43            23\n",
-       "Germany                     5.38            34\n",
-       "Spain                       7.83            12\n",
-       "Sweden                     13.29            14\n",
-       "UK                          6.25            16\n",
-       "USA                         7.89            39\n",
-       "Venezuela                   8.73            18"
+       "Empty DataFrame\n",
+       "Columns: [average_shipping_time, total_orders]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,30 +211,30 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "orders = pd.read_csv(\"./data/Northwind_dataset/orders.csv\", encoding=\"latin1\")\n",
-    "customers = pd.read_csv(\"./data/Northwind_dataset/customers.csv\", encoding=\"latin1\")\n",
+    "orders = pd.read_csv(\"./data/Northwind_dataset/orders.csv\")\n",
+    "customers = pd.read_csv(\"./data/Northwind_dataset/customers.csv\")\n",
     "\n",
     "# Merge orders with customer country\n",
-    "df = orders[[\"customerID\", \"orderDate\", \"shippedDate\"]].merge(\n",
-    "    customers[[\"customerID\", \"country\"]],\n",
-    "    on=\"customerID\",\n",
+    "df = orders[[\"customerid\", \"orderdate\", \"shippeddate\"]].merge(\n",
+    "    customers[[\"customerid\", \"country\"]],\n",
+    "    on=\"customerid\",\n",
     "    how=\"inner\"\n",
     ")\n",
     "\n",
     "# 1) Calculate shipping time in days\n",
-    "df[\"orderDate\"] = pd.to_datetime(df[\"orderDate\"])\n",
-    "df[\"shippedDate\"] = pd.to_datetime(df[\"shippedDate\"])\n",
-    "df[\"shipping_time\"] = (df[\"shippedDate\"] - df[\"orderDate\"]).dt.days\n",
+    "df[\"orderdate\"] = pd.to_datetime(df[\"orderdate\"])\n",
+    "df[\"shippeddate\"] = pd.to_datetime(df[\"shippeddate\"])\n",
+    "df[\"shipping_time\"] = (df[\"shippeddate\"] - df[\"orderdate\"]).dt.days\n",
     "\n",
     "# 2) Keep only orders in 1998 (or 2015 if that’s really what you want)\n",
-    "df = df[df[\"orderDate\"].dt.year == 2015]\n",
+    "df = df[df[\"orderdate\"].dt.year == 2015]\n",
     "\n",
     "# 3) Aggregate by country\n",
     "result1 = (\n",
     "    df.groupby(\"country\")\n",
     "      .agg(\n",
     "          average_shipping_time=(\"shipping_time\", \"mean\"),\n",
-    "          total_orders=(\"customerID\", \"count\")\n",
+    "          total_orders=(\"customerid\", \"count\")\n",
     "      )\n",
     ")\n",
     "\n",
@@ -303,12 +254,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc41d1ba",
+   "metadata": {},
+   "source": [
+    "## Question 3\n",
+    "The HR Team wants to know for each employee what was their age on the date\n",
+    "they joined the company and who they currently report to. Provide them with \n",
+    "a list of every employees with the following information:\n",
+    "\n",
+    "1. their full name (first name and last name combined in a single field)\n",
+    "2. their job title\n",
+    "3. their age at the time they were hired\n",
+    "4. their manager full name (first name and last name combined in a single field)\n",
+    "5. their manager job title\n",
+    "\n",
+    "Finally order the results by employee age and employee full name in an ascending order (lowest first)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "060a9760",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['employeeid', 'lastname', 'firstname', 'title', 'titleofcourtesy',\n",
+       "       'birthdate', 'hiredate', 'address', 'city', 'region', 'postalcode',\n",
+       "       'country', 'homephone', 'extension', 'photo', 'notes', 'reportsto',\n",
+       "       'photopath'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "employee = pd.read_csv('./data/Northwind_dataset/employees.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3a0ece06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['employeeid', 'lastname', 'firstname', 'title', 'titleofcourtesy',\n",
+       "       'birthdate', 'hiredate', 'address', 'city', 'region', 'postalcode',\n",
+       "       'country', 'homephone', 'extension', 'photo', 'notes', 'reportsto',\n",
+       "       'photopath'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee.columns"
+   ]
   }
  ],
  "metadata": {
