--- a/Northwind_project.ipynb
+++ b/Northwind_project.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "298bcd4b",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "346a9701-be72-4cdf-b7ff-5717545d6fb2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Northwind project"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0dedb629",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e6cc28ef-de8c-4e33-867a-95e2636a0ec7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "Northwind is a classic sample database that models a small international wholesale company, Northwind Traders. It contains realistic data on customers, suppliers, employees, products, and orders, allowing you to analyze the full sales process from product sourcing to order fulfillment.\n",
     "\n",
@@ -22,8 +38,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e21a69c",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6eb04244-d82e-49a3-8e8b-6e16ce881aa2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Question 1 \n",
     "\n",
@@ -44,79 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "6f23dbe8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>productname</th>\n",
-       "      <th>unitprice</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Tarte au sucre</td>\n",
-       "      <td>49.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ipoh Coffee</td>\n",
-       "      <td>46.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Schoggi Schokolade</td>\n",
-       "      <td>43.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Vegie-spread</td>\n",
-       "      <td>43.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Northwoods Cranberry Sauce</td>\n",
-       "      <td>40.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  productname  unitprice\n",
-       "0              Tarte au sucre       49.3\n",
-       "1                 Ipoh Coffee       46.0\n",
-       "2          Schoggi Schokolade       43.9\n",
-       "3                Vegie-spread       43.9\n",
-       "4  Northwoods Cranberry Sauce       40.0"
-      ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
      },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "inputWidgets": {},
+     "nuid": "a4a304aa-5a7b-4c4a-b354-db96e6d62cee",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
     "\n",
@@ -137,8 +103,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dab09d3f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "34829b64-a3c9-41b8-8f3d-2cce382ad78e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "\n",
     "### Question 2\n",
@@ -158,56 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "9d25729c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>average_shipping_time</th>\n",
-       "      <th>total_orders</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>country</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [average_shipping_time, total_orders]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ccfd7f33-d428-4af9-b168-7d85567e8db8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -255,8 +191,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc41d1ba",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "10954100-775e-4336-9e11-2384c6ba9b28",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Question 3\n",
     "The HR Team wants to know for each employee what was their age on the date\n",
@@ -274,76 +218,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "060a9760",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['employeeid', 'lastname', 'firstname', 'title', 'titleofcourtesy',\n",
-       "       'birthdate', 'hiredate', 'address', 'city', 'region', 'postalcode',\n",
-       "       'country', 'homephone', 'extension', 'photo', 'notes', 'reportsto',\n",
-       "       'photopath'],\n",
-       "      dtype='object')"
-      ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
      },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "inputWidgets": {},
+     "nuid": "02630417-8344-45d9-82c9-d7792926ac52",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1771852593648}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "employee = pd.read_csv('./data/Northwind_dataset/employees.csv')\n"
+    "employee = pd.read_csv('./data/Northwind_dataset/employees.csv')\n",
+    "employee[\"fullname\"] = employee[\"firstname\"] + \" \" + employee[\"lastname\"]\n",
+    "#first merge the employee table with itself\n",
+    "df_merge = employee.merge(employee[[\"employeeid\",\"fullname\",\"title\"]].add_prefix(\"manager_\"),\n",
+    "                         left_on=\"reportsto\",\n",
+    "                         right_on=\"manager_employeeid\",\n",
+    "                         how=\"left\")\n",
+    "\n",
+    "# tehn, convert the birthdate and hiredate columns to datetime\n",
+    "df_merge['birthdate'] = pd.to_datetime(df_merge['birthdate'])\n",
+    "df_merge['hiredate'] = pd.to_datetime(df_merge['hiredate'])\n",
+    "\n",
+    "# 1) Calculate the age of each employee at the time of hire\n",
+    "df_merge['age_at_hire'] = df_merge['hiredate'].dt.year - df_merge['birthdate'].dt.year\n",
+    "\n",
+    "df = (df_merge[[\"employeeid\", \"fullname\",\"title\",\"age_at_hire\",\"manager_fullname\",\"manager_title\"]]\n",
+    "        .sort_values(by=['age_at_hire','fullname'], ascending=True))\n",
+    "\n",
+    "display(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "3a0ece06",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['employeeid', 'lastname', 'firstname', 'title', 'titleofcourtesy',\n",
-       "       'birthdate', 'hiredate', 'address', 'city', 'region', 'postalcode',\n",
-       "       'country', 'homephone', 'extension', 'photo', 'notes', 'reportsto',\n",
-       "       'photopath'],\n",
-       "      dtype='object')"
-      ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
      },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "inputWidgets": {},
+     "nuid": "ddd4b288-d3a8-4c4c-b06b-5612f66e444f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "employee.columns"
    ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
+   "dashboards": [],
+   "environmentMetadata": {
+    "base_environment": "",
+    "environment_version": "4"
+   },
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "Northwind_project",
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": ".pandas_venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
