--- a/Northwind_project.ipynb
+++ b/Northwind_project.ipynb
@@ -284,6 +284,107 @@
    "source": [
     "employee.columns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e8a00d87-7d07-4a5f-be1c-22f263c9b82f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "## Question 4\n",
+    "The Logistics Team wants to do a retrospection of their global performances over 1997-1998, \n",
+    "in order to identify for which month they perform well. They asked you to provide them a list with:\n",
+    "\n",
+    "1. their year/month as single field in a date format (e.g. “1996-01-01” January 1996)\n",
+    "2. their total number of orders\n",
+    "3. their total freight (formatted to have no decimals)\n",
+    "\n",
+    "Filtered on the following conditions:\n",
+    "1. the order date is between 1997 and 1998\n",
+    "2. their total number of orders is greater than 35 orders \n",
+    "\n",
+    "Finally order the results by total freight (descending order).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a7eec791-6c25-4dd2-8167-1434eb6995aa",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1771940449188}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "orders = pd.read_csv(\"./data/Northwind_dataset/orders.csv\")\n",
+    "order_details = pd.read_csv(\"./data/Northwind_dataset/orders_details.csv\")\n",
+    "products = pd.read_csv(\"./data/Northwind_dataset/products.csv\")\n",
+    "\n",
+    "#date condition\n",
+    "orders[\"orderdate\"] = pd.to_datetime(orders[\"orderdate\"])\n",
+    "orders = orders[orders[\"orderdate\"].between(\"1997-01-01\", \"1998-12-31\")]\n",
+    "#Build a year/month field floored to first of month, e.g. 1997-01-01\n",
+    "orders[\"year_month\"] = orders[\"orderdate\"].dt.to_period(\"M\").dt.to_timestamp().dt.date\n",
+    "\n",
+    "#calculating total orders and freights number\n",
+    "df = (\n",
+    "    orders.merge(order_details, on=\"orderid\", how=\"inner\")\n",
+    "    .groupby(\"year_month\")\n",
+    "    .agg(\n",
+    "        total_orders=(\"orderid\", \"nunique\"),\n",
+    "        total_freights=(\"freight\", \"sum\"))\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "#order condition\n",
+    "df = df[df[\"total_orders\"] > 35]\n",
+    "\n",
+    "#Format total_freight to have no decimals (integer)\n",
+    "df[\"total_freights\"] = df[\"total_freights\"].round(0).astype(int)\n",
+    "display(df)\n",
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "74bfad4d-8967-4032-8550-0bab7bda4abe",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
